# dep-why

./: Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/graph/: builder.rs  cycle.rs  mod.rs  search.rs  types.rs
src/license/: types.rs
src/output/: json.rs  mermaid.rs  mod.rs  tree.rs
src/parsers/: cargo.rs  detect.rs  mod.rs  npm.rs  pip.rs
src/security/: mod.rs  osv.rs  types.rs
tests/: cli_tests.rs
