[package]
name = "dep-why"
version = "0.1.0"
edition = "2021"
authors = ["Katie"]
description = "Trace why any dependency exists in your project"
license = "MIT"
repository = "https://github.com/sudokatie/dep-why"
keywords = ["dependencies", "npm", "cargo", "pip", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
petgraph = "0.6"
thiserror = "1"
colored = "2"
dirs-next = "2"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "dep-why"
path = "src/main.rs"
